Closed
Bug 651119
Opened 15 years ago
Closed 15 years ago
TI: Mochitest-2 prototype test failures
Categories
(Core :: JavaScript Engine, defect)
Core
JavaScript Engine
Tracking
()
RESOLVED
FIXED
People
(Reporter: jandem, Unassigned)
References
Details
Attachments
(1 file)
|
1.34 KB,
application/x-javascript
|
Details |
See attachment for a shell test case.
--
$ ./js -n -m test.js
test.js:49: TypeError: result[0].join is not a function
--
Regression from http://hg.mozilla.org/projects/jaegermonkey/rev/3816e4abb158
The iterator.call(..) in Enumerable.map returns the call function at some point so the return value is not set.
Updated•15 years ago
|
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → DUPLICATE
Comment 3•15 years ago
|
||
Tricky call path corner case. The slow paths in lowered call/apply calls store their return value in the wrong place (the address of the 'this' value, not the callee) and the rejoin code in the call path has to be special cased. The corresponding part of the rejoin path emitted for calls did not do this special casing, so if we recompiled while handling a call/apply we would reload the original Function.call or Function.apply as the return value.
http://hg.mozilla.org/projects/jaegermonkey/rev/44392a434cb1
Status: REOPENED → RESOLVED
Closed: 15 years ago → 15 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•