[INFER] Reload from adjusted return address when rejoining from lowered call or apply, bug 651119.